<?xml version="1.0"?>
<package format="2">
  <name>hb_package</name>
  <version>0.0.1</version>
  <description>Package for heartbeat signal simulation and filtering</description>

  <maintainer email="anna@email.com">Il Tuo Nome</maintainer>
  <license>MIT</license>

  <!-- Build dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <!-- Run dependencies -->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- Python installation support -->
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>python3</exec_depend>

  <!-- Optional: per garantire compatibilità -->
  <export>
    <!-- Nothing to export -->
  </export>
</package>
